add third year modules; change accent colour; update website to use new template; recompile all modules

--- a/index.html
+++ b/index.html
@@ -1,39 +1,69 @@
 <!DOCTYPE html>
 <head>
-    <title>Notes - HughTB / Hugh Baldwin</title>
-    <link rel="stylesheet" href="index.css">
+  <title>HughTB - cs-notes</title>
+
+  <style>
+    html {
+      --accent: #702963;
+      --on-accent: #FFFFFF;
+    }
+  </style>
+
+  <link rel="stylesheet" href="/main.css">
+  <script src="https://kit.fontawesome.com/bb487193c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-<div id="grid-container">
-<section id="about">
-    <h1>Notes</h1>
-    <p>
-        Here is a collection of my notes from BSc Computer Science @ University of Portsmouth. The source code for
-         these notes is in the <a href="https://github.com/HughTB/cs-notes">cs-notes</a> repository. (Yes, they're
-         written in LaTeX)
-    </p>
-</section>
+  <div id="main">
+    <section class="top-pane center">
+      <div class="max-65">
+        <h1>cs-notes</h1>
+        
+        <p>This is a collection of notes from my BSc Computer Science course at the University of Portsmouth</p>
+        <p>Should you want it, the source code for these notes can be found in my <a href="https://github.com/HughTB/cs-notes">cs-notes repository</a> (they're written in LaTeX, so good luck deciphering any of it <i class="fa-solid fa-face-smile-wink"></i>)</p>
+      </div>
+    </section>
 
-<section id="projects">
-    <div>
-        <h2>Second Year</h2>
-        <p>
-            <a href="2nd-year/m21270-dsalg/m21270.pdf">M21270 - Data Structures and Algorithms</a><br>
-            <a href="2nd-year/m21274-dmafp/m21274.pdf">M21274 - Discrete Mathematics and Functional Programming</a><br>
-            <a href="2nd-year/m30233-osint/m30233.pdf">M30233 - Operating Systems and Internetworking</a><br>
-            <a href="2nd-year/m30235-paapl/m30235.pdf">M30235 - Programming Applications and Programming Languages</a><br>
-            <a href="2nd-year/m30239-ehack/m30239.pdf">M30239 - Ethical Hacking (My chosen optional module)</a><br>
-            <a href="2nd-year/m30819-setap/m30819.pdf">M30819 - Software Engineering Theory and Practice</a><br>
-        </p>
-    </div>
+    <section class="max-50">
+      <div class="project">
+        <h1>Third Year</h1>
+        <ul>
+          <li><a href="3rd-year/m21276-theoc/m21276.pdf">M21276 - Theoretical Computer Science</a></li>
+          <li><a href="3rd-year/m21279-adnet/m21279.pdf">M21279 - Advanced Networks (TB1 Optional Module)</a></li>
+          <li><a href="3rd-year/m30225-disas/m30225.pdf">M30225 - Distributed Systems and Security</a></li>
+          <li><a href="3rd-year/m30226-intot/m30226.pdf">M30226 - Internet of Things (TB2 Optional Module)</a></li>
+          <li>M24739 - Individual Project is stored in a separate, private, repository</li>
+        </ul>
+      </div>
 
-    <div>
-        <h2>First Year</h2>
-        <p>
-            <a href="1st-year/m30231-netwk/m30231.pdf">M30231 - Networks</a><br>
-        </p>
-    </div>
-</section>
-</div>
+      <div class="project">
+        <h1>Second Year</h1>
+        <ul>
+          <li><a href="2nd-year/m21270-dsalg/m21270.pdf">M21270 - Data Structures and Algorithms</a></li>
+          <li><a href="2nd-year/m21274-dmafp/m21274.pdf">M21274 - Discrete Mathematics and Functional Programming</a></li>
+          <li><a href="2nd-year/m30233-osint/m30233.pdf">M30233 - Operating Systems and Internetworking</a></li>
+          <li><a href="2nd-year/m30235-paapl/m30235.pdf">M30235 - Programming Applications and Programming Languages</a></li>
+          <li><a href="2nd-year/m30239-ehack/m30239.pdf">M30239 - Ethical Hacking (My chosen optional module)</a></li>
+          <li><a href="2nd-year/m30819-setap/m30819.pdf">M30819 - Software Engineering Theory and Practice</a></li>
+        </ul>
+      </div>
+
+      <div class="project">
+        <h1>First Year</h1>
+        <ul>
+          <li><a href="1st-year/m30231-netwk/m30231.pdf">M30231 - Networks</a></li>
+          <li>Other first year modules may become available later, these were originally typed up in Markdown and I have not found a method of conversion that works to my liking, so I spent a while manually re-typesetting the networks module, but have not finished any others since</li>
+        </ul>
+      </div>
+
+      <div class="last">
+        <p>I cannot and do not guarantee the accuracy or usefulness of these notes as study/ revision aids, especially for courses delivered by other universities.</p> 
+        <p>If you link to or otherwise distribute these notes anywhere other than this website, please make sure you credit me, they take quite a lot of work to make! Thanks!</p>
+      </div>
+    </section>
+  </div>
+
+  <footer class="center">
+    <p>&copy; <a href="https://hughtb.uk">Hugh Baldwin</a>, 2024
+  <footer>
 </body>
